src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_11.snap
---
source: src/parser/test.rs
description: "fn(@, x) { return x; }"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,3)->(0,4)),
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,9)->(0,10)),
                statements: [
                    Return {
                        token: Token(Return, "return", (0,11)->(0,17)),
                        value: Some(
                            Ok(
                                Identifier {
                                    token: Token(Identifier, "x", (0,18)->(0,19)),
                                    name: "x",
                                },
                            ),
                        ),
                    },
                ],
            },
        ),
    },
]

===================================

fn(@, x) { return x; }
   ^ SyntaxError: Unexpected '@'.
